k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: work-report
  labels:
    app.kubernetes.io/name: work-report
    app.kubernetes.io/part-of: ptmsn-infrastructure
