k8s/06-queue-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-report-worker
  namespace: work-report
  labels:
    app: work-report-worker
    tier: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: work-report-worker
  template:
    metadata:
      labels:
        app: work-report-worker
        tier: worker
    spec:
      containers:
        - name: worker
          image: ptmsn/work-report:latest
          imagePullPolicy: IfNotPresent
          command: ["php", "artisan", "queue:work", "redis", "--sleep=3", "--tries=3", "--max-time=3600"]
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: storage-volume
              mountPath: /var/www/html/storage/app/public
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: work-report-storage-pvc
