k8s/08-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: work-report-service
  namespace: work-report
  labels:
    app: work-report-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: work-report-app
