k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: work-report-ingress
  namespace: work-report
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # Compression & Buffer Tuning
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
spec:
  tls:
    - hosts:
        - work-report.ptmsn.co.id
      secretName: work-report-tls
  rules:
    - host: work-report.ptmsn.co.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: work-report-service
                port:
                  number: 80
